executor-deployments.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: clickhouse-v20.9-deployment
spec:
  selector:
    matchLabels:
      app: clickhouse-playground
      component: executor
      versionId: v20.9
  replicas: 1
  template:
    metadata:
      labels:
        app: clickhouse-playground
        component: executor
        versionId: v20.9
    spec:
      shareProcessNamespace: true
      containers:
      - name: clickhouse-executor
        image: gcr.io/avid-life-273910/executor
      - name: clickhouse-server
        image: yandex/clickhouse-server:latest
      #   ports:
      #   - containerPort: 8123
      #     protocol: 'TCP'
      #   - containerPort: 9000
      #     protocol: 'TCP'
      #   - containerPort: 9004
      #     protocol: 'TCP'
      #   - containerPort: 9009
      #     protocol: 'TCP'
---
