frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: clickhouse-playground
      component: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: clickhouse-playground
        component: frontend
    spec:
      containers:
      - name: frontend
        image: gcr.io/avid-life-273910/frontend
        stdin: true
        ports:
        - containerPort: 3000
