app-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: app-service
    labels:
        app: clickhouse-playground
        component: app
spec:
    type: ClusterIP
    ports:
      - port: 8080
        # protocol: TCP
        # nodePort: 30002
        targetPort: 8080
    selector:
        app: clickhouse-playground
        component: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app-deployment
spec:
    selector:
        matchLabels:
            app: clickhouse-playground
            component: app
    replicas: 1
    template:
        metadata:
            labels:
                app: clickhouse-playground
                component: app
        spec:
            containers:
              - name: app
                image: gcr.io/avid-life-273910/app
                ports:
                  - containerPort: 8080
