clickhouse-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: clickhouse-service
    labels:
        app: clickhouse
spec:
    type: NodePort
    ports:
      - port: 8080
        protocol: TCP
        nodePort: 30001
        targetPort: 8080
    selector:
        app: clickhouse
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: clickhouse-deployment
spec:
    selector:
        matchLabels:
            app: clickhouse
    replicas: 1
    template:
        metadata:
            labels:
                app: clickhouse
        spec:
            shareProcessNamespace: true
            containers:
              - name: clickhouse-executor
                image: clickhouse-executor
                imagePullPolicy: Never
              - name: clickhouse-server
                image: yandex/clickhouse-server:20.7.2.30
                ports:
                  - containerPort: 8080
