frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: frontend-service
    labels:
        app: clickhouse-playground
        component: frontend
spec:
    type: ClusterIP
    ports:
      - port: 3000
        targetPort: 3000
    selector:
        app: clickhouse-playground
        component: frontend
