rabbitmq-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: app-service
    labels:
        app: clickhouse-playground
        component: app
spec:
    type: LoadBalancer 
    ports:
      - port: 15672
        # protocol: TCP
        # nodePort: 30002
        targetPort: 15672
    selector:
        app: clickhouse-playground
        component: app
