ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  # defaultBackend:
  #   service:
  #     name: frontend
  #     port:
  #       number: 8080
  rules:
  - http:
      paths:
      - path: /api/*
        backend:
          serviceName: app-service
          servicePort: 8080
      - path: /*
        backend:
          serviceName: frontend-service
          servicePort: 3000
